# Universe-Simulator

./: .gitignore  CMakeLists.txt  README.md
assets/: default.frag  default.vert  point.frag  point.vert  spaceship.mtl  sprite.vert  star.vert
assets/shaders/: glossy.frag  shader.vert
docs/: DESIGN.md  DOCUMENTATION.md
libraries/include/glad/: glad.h
src/: Camera.cpp  Camera.h  DESIGN.md  DOCUMENTATION.md  JoltIncludes.h  Octree.cpp  Octree.h  Physics.hpp  Planet.h  Renderer.hpp  SpaceEntity.cpp  SpaceEntity.h  SpaceObject.h  Spaceship.cpp  Spaceship.h  Texture.cpp  Universe.cpp  Universe.h  backup.txt  backup2.txt  glad.c  graphicsShapes.cpp  main.cpp  renderingExample.cpp  shaderClass.cpp  shaderClass.h  test.cpp
